[project]
name = "border-ownership"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "altair>=5.5.0",
    "jax-metal>=0.1.1 ; platform_system == 'Darwin'",
    "jax>=0.4.35",
    "marimo>=0.9.23",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["border-ownership"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.3",
]

[tool.ruff]
select = ["ALL"]  # Enables all linting rules
fix = true        # Auto-fix issues, including import sorting

# Enable import sorting via isort
[tool.ruff.isort]
combine_as_imports = true
force_sort_within_sections = true
force_wrap_aliases = true
